--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
+AddDefaultCharset utf-8
+
 RewriteEngine on
+RewriteBase /
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRUle ^(.*)$ index.php
+
+RewriteRule ^(.*)$ index.php
